Bug 1514501 - Fix screen selection and scaling for fullscreen. r=jmathies, a=RyanVM

I needed to scale the layout device pixels coming from Windows before passing them to ScreenForRect(). Also, I'm using GetRect() directly instead of GetRectDisplayPix() * scale now, to avoid an unnecessary double scale & round which was making fullscreen windows off by one pixel in many cases.

Differential Revision: https://phabricator.services.mozilla.com/D15604